--- a/assets/_general.scss
+++ b/assets/_general.scss
@@ -1,3 +1,14 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
+#__nuxt,
+#__layout {
+    height: 100%;
+}
+
 .form-label {
     font-size: 13px;
     font-weight: 500;
@@ -22,4 +33,61 @@
         background-color: #f2f2f2;
         border-color: #f2f2f2;
     }
+}
+
+/** scrollbar css override **/
+::-webkit-scrollbar {
+    background-color: #fff;
+    width: 10px
+}
+
+::-webkit-scrollbar-track {
+    background-color: #fff
+}
+
+::-webkit-scrollbar-track:hover {
+    background-color: #f4f4f4
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 10px;
+    border: 3px solid #fff
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a0a0a5;
+    border: 2px solid #f4f4f4
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-button {
+    display: none
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar {
+    background-color: #fff;
+    width: 10px
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-track {
+    background-color: #fff
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-track:hover {
+    background-color: #f4f4f4
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 10px;
+    border: 3px solid #fff
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-thumb:hover {
+    background-color: #a0a0a5;
+    border: 2px solid #f4f4f4
+}
+
+::v-deep.ui.selection.dropdown .menu::-webkit-scrollbar-button {
+    display: none
 }
