--- a/assets/_general.scss
+++ b/assets/_general.scss
@@ -54,6 +54,8 @@ body {
 
     .dropdown-menu.show {
         width: 100%;
+        max-height: 300px;
+        overflow-y: auto;
     }
 
     .dropdown-toggle {
